# waiter

./: .gitignore  LICENSE  README.md  cabal.sandbox.config  waiter  waiter.cabal  watch-and-build  watch-and-build.cabal
src/: Main.hs  Waiter.hs
src/Waiter/: BuildAndServe.hs  Constants.hs  FileMatcher.hs  Internal.hs  Types.hs
src/Waiter/Internal/: Constants.hs
src/WatchAndBuild/: Internal.hs
src/WatchAndBuild/Internal/: Constants.hs
