name: waiter
version: 0.1.0.2
synopsis: Run and rebuild a server on file changes for compiled languages.
license: MIT
license-file: LICENSE
author: Dave Jachimiak
maintainer: dave.jachimiak@gmail.com
copyright: 2015 Dave Jachimiak
build-type: Simple
cabal-version: >=1.10

executable waiter
  main-is: Main.hs
  build-depends: base ==4.8.0.0
               , fsnotify ==0.1.0.3
               , process ==1.2.3.0
               , system-filepath ==0.4.13.2
               , regex-compat ==0.92
               , optparse-applicative >= 0.11 && < 0.12
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -threaded
